--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -220,7 +220,7 @@
                     <p class="text-faded"><span style="color: white; font-weight: bold">New Datasets</span>:  in areas that align with MLCommons:
                     <ul class="text-faded">
                       <li>Speech, medical, recommendation/personalization</li>
-                      <li>Science: <a href="https://www.mgi.gov/" target="_blank">https://www.mgi.gov/</a></li><ul>      
+                      <li>Science: <a href="https://www.mgi.gov/" target="_blank" style="color:while">https://www.mgi.gov/</a></li><ul>     </p> 
                    
                    <p class="text-faded"><span style="color: white; font-weight: bold">Tools & methodologies </span>for accelerating open-source dataset development:
 		<ul class="text-faded">
