--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -215,12 +215,12 @@
                 <h3 class="section-heading text-center" id="topics">Topics of Interest</h3>
                 <hr class="primary">
                 <p class="text-faded">
-                    We invite scientific contributions and positions papers on the following topics:
+           We invite scientific contributions and positions papers on the following topics:
 
                     <p class="text-faded"><span style="color: white; font-weight: bold">New Datasets</span>:  in areas that align with MLCommons:
                     <ul class="text-faded">
                       <li>Speech, medical, recommendation/personalization</li>
-                      <li>Science: <a href="https://www.mgi.gov/" target="_blank" style="color:while">https://www.mgi.gov/</a></li><ul>     </p> 
+                      <li>Science: <a href="https://www.mgi.gov/" target="_blank" style="color:while">https://www.mgi.gov/</a></li></ul>     </p> 
                    
                    <p class="text-faded"><span style="color: white; font-weight: bold">Tools & methodologies </span>for accelerating open-source dataset development:
 		<ul class="text-faded">
@@ -243,34 +243,29 @@
 
                     <p class="text-faded"><span style="color: white; font-weight: bold">Algorithms</span> for working with limited labeled data and improving label efficiency:
                     <ul class="text-faded">
-                      <li>Irreproducible data is not maintainable</li>
-                      <li>Reliable mechanisms to account for the human aspects of data collection</li>
-                      <li>Gathering data from humans requires acknowledging our humanity: frailty, subjectiveness, imperfections, knowledge gaps, etc.</li>
+			    <li>Active learning</li>
+<li>Semi-supervised learning</li>
+<li>Self-supervised learning</li>
+<li>Weak supervision</li>
+<li>Few-shot / zero-shot learning</li>
+<li>Transfer learning</li>
+<li>Novelty detection</li>
+<li>Drift detection</li>
                     </ul>
                     </p>
 
-                    <p class="text-faded"><span style="color: white; font-weight: bold">Validity:</span> Validity tells us about how well the data helps us explain things related to the phenomena captured by the data, e.g., via correlation between the data and external measures:
+                    <p class="text-faded"><span style="color: white; font-weight: bold">Responsible AI development
+:</span>
                     <ul class="text-faded">
-                      <li>Does the specific operationalization of a data collection procedure (e.g., answering a certain question on a 5-point Likert scale) accurately represent and allow generalizations to the abstract construct that is being modeled (e.g., human sentiment reactions to sentences)?</li>
-                      <li>Was the construct properly defined before it was operationalized (e.g., getting convicted of a crime is not necessarily equivalent to having committed the crime)?</li>
-                      <li>Does the data operationalization account for potential complexity, subjectivity, multi-valence or ambiguity of the intended construct?</li>
-                      <li>Does the data operationalization predict features of the represented construct (e.g., education research tries to explore whether grades are valid by studying its correlations to external indicators of success)?</li>
+                      <li>Fairness, bias, diversity evaluation and analysis for data sets and modeling/algorithms</li>
+<li>Tools for green AI hardware-software system design and evaluation</li> 
+<li>Scalable, reliable training methods and systems</li>
+<li>Tools, methodologies, and techniques for private, secure machine learning training</li>
+<li>Efforts toward reproducible AI, such as data cards, model cards</li>
                     </ul>
                     </p>
 
-                    <p class="text-faded"><span style="color: white; font-weight: bold">Fidelity:</span> Users of data often assume that the dataset accurately and comprehensively represents the phenomenon, which is almost never the case. For example, if the sentences in a sentiment corpus were sampled from Wikipedia, it might not work as well as news headlines required by the product: 
-                    <ul class="text-faded">
-                      <li>Importance of a balanced / unbiased / representative dataset</li>
-                      <li>Sampling, e.g:</li>
-                      <ul>
-                        <li>Temporal splitting can introduce bias if not done right in cases such as signal processing or sequential learning.</li>
-                        <li>User based splitting not keeping data of users separated is a potential bias source. E.g. if data from the same user is in test and train sets.</li>
-                      </ul>
-                      <li>Does the dataset live up to scientific standards of data collection?</li>
-                      <li>Correlation between the data and external measures or objective outcomes</li>
-                      <li>Problem of circular data validation (i.e., validating data by itself)</li>
-                    </ul>
-                    </p>
+                    
                 </p>
             </div>
         </div>
