--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -279,13 +279,13 @@
                 <h2 class="section-heading">Organizing Committee</h2>
                 <hr class="light">
                 <p>
-                    Andrew Ng, Landing AI
-		    Lora Aroyo, Google Research
-		    Cody Coleman, Stanford University
-		    Greg Diamos, Landing AI
-		    Vijay Janapa Reddi, Harvard University
-		    Joaquin Vanschoren, Eindhoven University of Technology
-		    Sharon Zhou, Stanford University
+<ul><li> Andrew Ng, Landing AI</li>
+<li>Lora Aroyo, Google Research</li>
+<li>Cody Coleman, Stanford University</li>
+<li>Greg Diamos, Landing AI</li>
+<li>Vijay Janapa Reddi, Harvard University</li>		    
+<li>Joaquin Vanschoren, Eindhoven University of Technology</li>		    
+<li>Sharon Zhou, Stanford University</li>		    
                 </p>
                 <br>
                 <br>
