--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -83,7 +83,7 @@
             <h1>1st Data-Centric AI Workshop (DCAI 2021)</h1>
             <hr>
             <p>
-            	<a href="https://neurips.cc/Conferences/2021/" target="_blank"><b>At the 35th NeurIPS Conference</b></a><br><br>
+            	<a href="https://neurips.cc/Conferences/2021/" target="_blank" style="color:white"><b>At the 35th NeurIPS Conference</b></a><br><br>
                 <span style="color: white;">
             	<b>Date:</b> 6 December 2021<br>
                 <b>Time PT:</b> 6:00am-12:20am<br>
