--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -279,13 +279,13 @@
                 <h2 class="section-heading">Organizing Committee</h2>
                 <hr class="light">
                 <p>
-<ul><li> Andrew Ng, Landing AI</li>
-<li>Lora Aroyo, Google Research</li>
-<li>Cody Coleman, Stanford University</li>
-<li>Greg Diamos, Landing AI</li>
-<li>Vijay Janapa Reddi, Harvard University</li>		    
-<li>Joaquin Vanschoren, Eindhoven University of Technology</li>		    
-<li>Sharon Zhou, Stanford University</li>		    
+Andrew Ng, Landing AI<br>
+Lora Aroyo, Google Research<br>
+Cody Coleman, Stanford University<br>
+Greg Diamos, Landing AI<br>
+Vijay Janapa Reddi, Harvard University<br>	    
+Joaquin Vanschoren, Eindhoven University of Technology<br>	    
+Sharon Zhou, Stanford University<br>		    
                 </p>
                 <br>
                 <br>
