--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -328,19 +328,19 @@ Sharon Zhou, Stanford University<br>
                                 <td>6:10 AM</td>
                                 <td>9:10 AM</td>
                                 <td>2:10 PM</td>
-                                <td><b>Invited talk: <a href="#ben-hutchinson" class="page-scroll" style="color: white; text-decoration: underline">Ben Hutchinson</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>6:30 AM</td>
                                 <td>9:30 AM</td>
                                 <td>2:30 PM</td>
-                                <td><b>Invited talk: <a href="#ian-soboroff" class="page-scroll" style="color: white; text-decoration: underline">Ian Soboroff</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>6:50 AM</td>
                                 <td>9:50 AM</td>
                                 <td>2:50 PM</td>
-                                <td><b>Invited talk: <a href="#andrea-olgiati" class="page-scroll" style="color: white; text-decoration: underline">Andrea Olgiati</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>7:10 AM</td>
@@ -364,13 +364,13 @@ Sharon Zhou, Stanford University<br>
                                 <td>8:05 AM</td>
                                 <td>11:05 AM</td>
                                 <td>4:05 PM</td>
-                                <td><b>Invited talk: <a href="#emily-dinan" class="page-scroll" style="color: white; text-decoration: underline">Emily Dinan</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>8:25 AM</td>
                                 <td>11:25 AM</td>
                                 <td>4:25 PM</td>
-                                <td><b>Invited talk: <a href="#aleksander-madry" class="page-scroll" style="color: white; text-decoration: underline">Aleksander Madry</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>8:45 AM</td>
@@ -382,13 +382,13 @@ Sharon Zhou, Stanford University<br>
                                 <td>8:55 AM</td>
                                 <td>11:55 AM</td>
                                 <td>4:55 PM</td>
-                                <td><b>Invited talk: <a href="#quang-duong" class="page-scroll" style="color: white; text-decoration: underline">Quang Duong</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>9:15 AM</td>
                                 <td>12:15 PM</td>
                                 <td>5:15 PM</td>
-                                <td><b>Invited talk: <a href="#peter-hallinan" class="page-scroll" style="color: white; text-decoration: underline">Peter Hallinan</a></b></td>
+                                <td><b>Invited talk: </b></td>
                             </tr>
                             <tr>
                                 <td>9:35 AM</td>
@@ -414,9 +414,9 @@ Sharon Zhou, Stanford University<br>
                 <br>
                 <h3 id="papers" class="text-center">Accepted Papers</h3><br>
                 <ul style="font-size: 120%; color: white">
-                    <li><a href="http://eval.how/dew2020/submissions/DEW2020_paper_1%20(1).pdf" style="color: white" target="_blank"><b>Reducing Annotation Artifacts in Crowdsourcing Datasets for Natural Language Processing</b></a><br><i>Donghoon Han, Juho Kim and Alice Oh</i><br><br></li>
-                    <li><a href="http://eval.how/dew2020/submissions/DEW2020_paper_2%20(1).pdf" style="color: white" target="_blank"><b>Machine Learning Training to Support Diversity of Opinion</b></a><br><i>Johanne Christensen and Benjamin Watson</i><br><br></li>
-	    	    <li><a href="http://eval.how/dew2020/submissions/DEW2020_paper_3%20(1).pdf" style="color: white" target="_blank"><b>Data Desiderata: Reliability and Fidelity in High-stakes AI</b></a><br><i>Shivani Kapania, Nithya Sambasivan, Kristen Olson, Hannah Highfill, Diana Akrong, Praveen Paritosh and Lora Aroyo</i><br><br></li>
+                    <li>><br><br></li>
+                    <li><br><br></li>
+	    	    <li>><br><br></li>
                 </ul>
                 <br>
                 <h3 id="invited-talks" class="text-center">Invited Talks</h3><br>
@@ -431,10 +431,10 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Emily Dinan
+                                Chris Re ( data selection )
                             </div>
                             <div class="project-category">
-                                Facebook AI
+                                Stanford AI Lab
                             </div>
                         </div>
                     </div>
@@ -446,10 +446,10 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Ian Soboroff
+                                Newsha Ardalani ( data benchmarking for NLP )
                             </div>
                             <div class="project-category">
-                                NIST
+                                Facebook AI Research
                             </div>
                         </div>
                     </div>
@@ -461,10 +461,10 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Aleksander Mądry
+                               Michael Bernstein ( data relations )
                             </div>
                             <div class="project-category">
-                                MIT
+                                Stanford University
                             </div>
                         </div>
                     </div>
@@ -476,10 +476,10 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Quang Duong
+                                Peter Mattson ( benchmarking )
                             </div>
                             <div class="project-category">
-                                Google Health
+                                Google Brain
                             </div>
                         </div>
                     </div>
@@ -491,10 +491,10 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Andrea Olgiati
+                                Curtis Northcutt ( data noise )
                             </div>
                             <div class="project-category">
-                                Amazon AI
+                                ChipBrain
                             </div>
                         </div>
                     </div>
@@ -506,7 +506,7 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Ben Hutchinson
+                                Praveen Paritosh ( data excellence )
                             </div>
                             <div class="project-category">
                                 Google Research
@@ -521,15 +521,16 @@ Sharon Zhou, Stanford University<br>
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Peter Hallinan
+                                D Sculley ( data debt )
                             </div>
                             <div class="project-category">
-                                Amazon
+                                Google Brain
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
+		
         </div>
     </div>
 </section>
