--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -85,10 +85,11 @@
             <p>
             	<a href="https://neurips.cc/Conferences/2021/" target="_blank" style="color:white"><b>At the 35th NeurIPS Conference</b></a><br><br>
                 <span style="color: white;">
-            	<b>Date:</b> 6 December 2021<br>
-                <b>Time PT:</b> 6:00am-12:20am<br>
+            	<b>Date:</b> 14 December 2021<br>
+    <!--
+                <b>Time PT:</b> 6:00am-12:20mm<br>
                 <b>Time EST:</b> 9:00am-3:20pm<br>
-                <b>Time CET:</b> 2:00pm-8:20pm<br>
+                <b>Time CET:</b> 2:00pm-8:20pm<br> -->
 		<b>Location:</b> Virtual
                 </span>
 			</p>
