--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -285,7 +285,7 @@ Sharon Zhou, Stanford University<br>
     </div>
 </section>
 
-  <section class="bg-primary" style="padding-bottom: 0" id="program">
+<!--  <section class="bg-primary" style="padding-bottom: 0" id="program">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -659,7 +659,7 @@ Sharon Zhou, Stanford University<br>
         </div>
     </div>
 </section>
-
+-->
   <section id="contact">
     <div class="container">
         <div class="row">
@@ -669,9 +669,9 @@ Sharon Zhou, Stanford University<br>
             </div>
         </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="mailto:data-excellence@googlegroups.com">
+                <a href="mailto:neurips-data-centric-ai@googlegroups.com">
                 <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>data-excellence@googlegroups.com</p>
+                    <p>neurips-data-centric-ai@googlegroups.com</p>
                 </a>
             </div>
         </div>
