--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -275,11 +275,11 @@ Sharon Zhou, Stanford University<br>
                 </p>
                 <br>
                 <br>
-                <h2 class="section-heading">Program Committee</h2>
+   <!--             <h2 class="section-heading">Program Committee</h2>
                 <hr class="light">
                 <p>
                     TDB
-                </p>
+                </p> -->
             </div>
         </div>
     </div>
