--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -194,11 +194,11 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 		    
 <h3 class="section-heading text-center" id="topics">Submission Instructions</h3>
 
-<p class="text-faded"> We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. All papers need to be formatted according to the NeurIPS2021 guidelines. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop. The submission deadline is Sunday September 20, 2021, anywhere on Earth (AoE). If you experience any problems with the submission site, please email Vijay Reddi (vj@eecs.harvard.edu)</p>
+<p class="text-faded"> We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. All papers need to be formatted according to the NeurIPS2021 guidelines. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop. The submission deadline is Sunday September 20, 2021, anywhere on Earth (AoE). If you experience any problems with the submission site, please email us at <a href="mailto:neurips-data-centric-ai@googlegroups.com">neurips-data-centric-ai@googlegroups.com</a></p>
 
 <p class="text-center">
 <br>
-<a href="https://easychair.org/conferences/?conf=dew2020" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
+<a href="https://" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
                 <br>
                 <br>
 <h3 class="section-heading text-center" id="topics">Topics of Interest</h3>
