--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -153,16 +153,16 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-envelope wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Notification of acceptance</h3>
-                    <p class="text-muted">October 18, 2021</p>
+                    <p class="text-muted">October 22, 2021</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+     <!--       <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Final camera-ready papers due</h3>
                     <p class="text-muted">October 22, 2021</p>
                 </div>
-            </div>
+            </div> -->
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".3s"></i>
@@ -198,7 +198,7 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 
 <p class="text-center">
 <br>
-<a href="https://" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
+<a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-default btn-xl">Submission Link</a></p>
                 <br>
                 <br>
 <h3 class="section-heading text-center" id="topics">Topics of Interest</h3>
