--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -113,9 +113,9 @@
 
 		    
 		    </p>
-                    <p>This workshop continues a series of <u><b>preceding workshops on related topics</b></u>:
-                    <ul style="font-size: 150%">
-			 <li><a href="http://eval.how/dew2020/index.html" target="_blank">Data Excellence</a> @ HCOMP</li>    
+                    <p>This workshop builds on a tradition of <u><b>workshops on managing data</b></u>:
+			<ul style="font-size: 150%">
+			<li><a href="http://eval.how/dew2020/index.html" target="_blank">Data Excellence</a> @ HCOMP</li>    
                         <li><a href="http://eval.how/aaai-2020/" target="_blank">Meta-Eval 2020</a> @ AAAI</li>
                         <li><a href="http://eval.how/aaai/" target="_blank">REAIS 2019</a> @ HCOMP</li>
                         <li><a href="https://sadworkshop.wordpress.com/" target="_blank">SAD 2019</a> @ TheWebConf (WWW)</li>
