--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -186,11 +186,24 @@
                 <h2 class="section-heading text-center">Call for Papers</h2>
                 <hr class="light">
                 <p class="text-faded">
-<p class="text-faded">The ML community has a strong track record of <span style="color: white; font-weight: bold">building and using datasets for AI systems</span>. But this endeavor is often artisanal—painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building, maintaining and evaluating datasets easier, cheaper and more repeatable. So, the core challenge is to accelerate dataset creation and increase the efficiency of use and reuse by democratizing data engineering and evaluation. <br><br>
+<p class="text-faded">The ML community has a strong track record of <span style="color: white; font-weight: bold">building and using datasets for AI systems</span>. 
+	But this endeavor is often artisanal—painstaking and expensive. 
+	The community lacks high productivity and efficient open data engineering tools to make building, maintaining and evaluating datasets easier, cheaper and more repeatable. 
+	So, the core challenge is to accelerate dataset creation and iteration together with increasing the efficiency of use and reuse by democratizing data engineering and evaluation. <br><br>
 
-If 80 percent of machine learning work is data preparation, then <span style="color: white; font-weight: bold">ensuring data quality</span> is the most important work of a machine learning team and therefore a vital research area. With the rise of artificial intelligence human-labeled data has increasingly become the fuel and compass of AI-based software systems. The growing focus on scale, speed, and cost of building datasets has resulted in an impact on quality, which is nebulous and often circularly defined, since the annotators are the source of data and ground truth [Riezler, 2014]. While dataset quality is still the top concern everyone has, the ways in which that is measured in practice is poorly understood and sometimes simply wrong. A decade later, we see some cause for concern: fairness and bias issues in labeled datasets [Goel and Faltings, 2019], quality issues in datasets [Crawford and Paglen, 2019], limitations of benchmarks [Kovaleva et al., 2019, Welty et al., 2019] reproducibility concerns in machine learning research [Pineau et al., 2018, Gunderson and Kjensmo, 2018], lack of documentation and replication of data [Katsuno et al., 2019].<br><br>
+If 80 percent of machine learning work is data preparation, then <span style="color: white; font-weight: bold">ensuring data quality</span> is the most important work of a machine learning team and therefore a vital research area. 
+	Human-labeled data has increasingly become the fuel and compass of AI-based software systems - yet innovative efforts have mostly focused on models and code. 
+	The growing focus on scale, speed, and cost of building and improving datasets has resulted in an impact on quality, which is nebulous and often circularly defined, since the annotators are the source of data and ground truth [Riezler, 2014]. 
+	The development of tools to make repeatable and systematic adjustments to datasets has also lagged.
+	While dataset quality is still the top concern everyone has, the ways in which that is measured in practice is poorly understood and sometimes simply wrong. 
+	A decade later, we see some cause for concern: fairness and bias issues in labeled datasets [Goel and Faltings, 2019], quality issues in datasets [Crawford and Paglen, 2019], 
+	limitations of benchmarks [Kovaleva et al., 2019, Welty et al., 2019] reproducibility concerns in machine learning research [Pineau et al., 2018, Gunderson and Kjensmo, 2018],
+	lack of documentation and replication of data [Katsuno et al., 2019], and unrealistic performance metrics [Berstein 2021].<br><br>
 
-We need a framework for <span style="color: white; font-weight: bold">excellence in data engineering</span> that does not yet exist. In the first to market rush with data, aspects of maintainability, reliability, validity, and fidelity of datasets are often overlooked. We want to turn this way of thinking on its head and highlight examples, case-studies, methodologies for excellence in data collection. Building an active research community focused on Data Centric AI is an important part of the process of defining the core problems and creating ways to measure progress in machine learning through data quality tasks. <br></p>
+We need a framework for <span style="color: white; font-weight: bold">excellence in data engineering</span> that does not yet exist. In the first to market rush with data, aspects of
+	maintainability, reproducibility, reliability, validity, and fidelity of datasets are often overlooked. We want to turn this way of thinking on its head and highlight examples, 
+	case-studies, methodologies for excellence in data collection. Building an active research community focused on Data Centric AI is an important part of the process of defining 
+	the core problems and creating ways to measure progress in machine learning through data quality tasks. <br></p>
 		    
 <h3 class="section-heading text-center" id="topics">Submission Instructions</h3>
 
@@ -211,7 +224,7 @@ Data Centric AI workshop is inviting <span style="color: white; font-weight: bol
                       <li>Speech, medical, recommendation/personalization</li>
                       <li>Science: <a href="https://www.mgi.gov/" target="_blank" style="color:while">https://www.mgi.gov/</a></li></ul>     </p> 
                    
-<p class="text-faded"><span style="color: white; font-weight: bold">Tools & methodologies </span>for accelerating open-source dataset development:
+<p class="text-faded"><span style="color: white; font-weight: bold">Tools & methodologies </span>for accelerating open-source dataset iteration:
 		<ul class="text-faded">
 			<li>Tools that quantify and accelerate time to source and prepare high quality data</li>
 			<li>Tools that ensure that the data is labeled consistently, such as label consensus</li>
@@ -265,7 +278,7 @@ Data Centric AI workshop is inviting <span style="color: white; font-weight: bol
                 <h2 class="section-heading">Organizing Committee</h2>
                 <hr class="light">
                 <p>
-Andrew Ng, Landing AI<br>
+Andrew Ng, Landing AI, DeepLearning.AI<br>
 Lora Aroyo, Google Research<br>
 Cody Coleman, Stanford University<br>
 Greg Diamos, Landing AI<br>
