--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -94,10 +94,12 @@
                 </span>
 			</p>
             <a href="#dates" class="btn btn-primary btn-xl page-scroll">Important Dates</a>
-            <span style="width: 20px; display: inline-block;"></span>
-            <a href="https://www.humancomputation.com/attend.html#registration" target="_blank" class="btn btn-warning btn-xl">Register</a>
-            <span style="width: 20px; display: inline-block;"></span>
-            <a href="#invited-talks" class="btn btn-success btn-xl page-scroll">Talks</a>
+	    <center>
+              <span style="width: 20px; display: inline-block;"></span>
+              <a href="https://www.humancomputation.com/attend.html#registration" target="_blank" class="btn btn-warning btn-xl">Register</a>
+              <span style="width: 20px; display: inline-block;"></span>
+              <a href="#invited-talks" class="btn btn-success btn-xl page-scroll">Talks</a>
+	    </center>
         </div>
     </div>
 </header>
@@ -111,9 +113,9 @@
 
 <p>The main objective of this workshop is to cultivate the DCAI community into a vibrant interdisciplinary field that tackles practical data problems. We consider some of those problems to be: data collection/generation, data labeling, data preprocess/augmentation, data quality evaluation, data debt, and data governance. Many of these areas are nascent, and we hope to further their development by knitting them together into a coherent whole. Together we will define the DCAI movement that will shape the future of AI and ML. Please see our call for papers below to take an active role in shaping that future! If you have any questions, please reach out to 
 	Vijay Reddi (<a style="color: black"; href="mailto:neurips-data-centric-ai@googlegroups.com"> neurips-data-centric-ai@googlegroups.com</a>) 
-	or ask on Discourse (<a style="color: black"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
-	(<a style="color: black"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) </p> 
-
+	<!-- or ask on Discourse (<a style="color: black"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
+	(<a style="color: black"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) --> </p> 
+ 
 		    
 		    </p>
                     <p>This workshop builds on a tradition of <u><b>workshops on managing data</b></u>:
@@ -201,7 +203,7 @@ If 80 percent of machine learning work is data preparation, then <span style="co
 	While dataset quality is still the top concern everyone has, the ways in which that is measured in practice is poorly understood and sometimes simply wrong. 
 	A decade later, we see some cause for concern: fairness and bias issues in labeled datasets [Goel and Faltings, 2019], quality issues in datasets [Crawford and Paglen, 2019], 
 	limitations of benchmarks [Kovaleva et al., 2019, Welty et al., 2019] reproducibility concerns in machine learning research [Pineau et al., 2018, Gunderson and Kjensmo, 2018],
-	lack of documentation and replication of data [Katsuno et al., 2019], and unrealistic performance metrics [Berstein 2021].<br><br>
+	lack of documentation and replication of data [Katsuno et al., 2019], and unrealistic performance metrics [Bernstein 2021].<br><br>
 
 We need a framework for <span style="color: white; font-weight: bold">excellence in data engineering</span> that does not yet exist. In the first to market rush with data, aspects of
 	maintainability, reproducibility, reliability, validity, and fidelity of datasets are often overlooked. We want to turn this way of thinking on its head and highlight examples, 
@@ -212,8 +214,8 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 
 <p class="text-faded"> We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. All papers need to be formatted according to the NeurIPS2021 guidelines. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop. The submission deadline is Sunday September 20, 2021, anywhere on Earth (AoE). If you experience any problems with the submission site, please email us at 
 	(<a style="color: white"; href="mailto:neurips-data-centric-ai@googlegroups.com"> neurips-data-centric-ai@googlegroups.com</a>) 
-	or ask on Discourse (<a style="color: white"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
-	(<a style="color: white"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>)</p>
+	<!-- or ask on Discourse (<a style="color: white"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
+	(<a style="color: white"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) --> </p>
 
 <p class="text-center">
 <br>
