--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -148,28 +148,28 @@
     <div class="container">
         <div class="row">
             
-            <div class="col-lg-3 col-md-6 col-md-offset-6 text-center">
+            <div class="col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
                     <h3>Submission Deadline</h3>
                     <p class="text-muted">September 17, 2021</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-md-offset-6 text-center">
+            <div class="col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-envelope wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Notification of acceptance</h3>
                     <p class="text-muted">October 22, 2021</p>
                 </div>
             </div>
-     <!--       <div class="col-lg-3 col-md-6 text-center">
+     <!--       <div class="col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Final camera-ready papers due</h3>
                     <p class="text-muted">October 22, 2021</p>
                 </div>
             </div> -->
-            <div class="col-lg-3 col-md-6 col-md-offset-6 text-center">
+            <div class="col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Workshop</h3>
