--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -122,7 +122,10 @@
 		    
 		    </p>
 		
-		To learn more about Data Centric AI here <p> <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]">Data-Centric AI (DCAI)</a> </p>
+		Learn more about Data Centric AI here 
+		<span style="width: 20px; display: inline-block;"></span>
+                <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank" class="btn btn-warning btn-xl">DCAI</a>
+		
 		<!--
                     <p>This workshop builds on a tradition of <u><b>workshops on managing data</b></u>:
 			<ul style="font-size: 150%">
