--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -80,7 +80,7 @@
   <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>1st Data-Centric AI Workshop (DCAI 2021)</h1>
+            <h1>NeurIPS Data-Centric AI Workshop</h1>
             <hr>
             <p>
             	<!-- <a href="https://neurips.cc/Conferences/2021/" target="_blank" style="color:white"><b>At the 35th NeurIPS Conference</b></a><br><br> -->
