--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -96,7 +96,7 @@
             <a href="#dates" class="btn btn-primary btn-xl page-scroll">Important Dates</a>
 	    
               <span style="width: 20px; display: inline-block;"></span>
-              <a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-warning btn-xl">Submit</a>
+              <a href="https://cmt3.research.microsoft.com/DCAI2021" target="_blank" class="btn btn-warning btn-xl">Paper Submission</a>
 		
               <!--
 	      <span style="width: 20px; display: inline-block;"></span>
