--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -160,17 +160,17 @@
             <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
-			<h3>Submission Deadline</h3>
-		    <p class="text-muted">September 30, 2021</p>
+			<h3>Early Submission Deadline</h3>
+		    <p class="text-muted">September 17, 2021</p>
                 </div>
-<!--             </div>
+            </div>
 	    <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
                     <h3>Submission Deadline</h3>
                     <p class="text-muted">September 30, 2021</p>
                 </div>
-            </div> -->
+            </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-envelope wow bounceIn text-primary" data-wow-delay=".1s"></i>
