--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -157,22 +157,21 @@
     <div class="container">
         <div class="row">
             
-            <div class="col-md-6 text-center">
+            <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
 			<h3>Early Submission Deadline</h3>
 		    <p class="text-muted">September 30, 2021</p>
-		    <p class="text-muted">Early Submission Deadline: September 17, 2021</p>
                 </div>
             </div>
-<!-- 	    <div class="col-md-4 text-center">
+	    <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
                     <h3>Submission Deadline</h3>
                     <p class="text-muted">September 30, 2021</p>
                 </div>
             </div> -->
-            <div class="col-md-4 text-center">
+            <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-envelope wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Notification of acceptance</h3>
@@ -186,7 +185,7 @@
                     <p class="text-muted">October 22, 2021</p>
                 </div>
             </div> -->
-            <div class="col-md-4 text-center">
+            <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Workshop</h3>
