--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -170,7 +170,7 @@
                     <h3>Submission Deadline</h3>
                     <p class="text-muted">September 30, 2021</p>
                 </div>
-            </div> -->
+            </div> 
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-envelope wow bounceIn text-primary" data-wow-delay=".1s"></i>
