--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -247,7 +247,7 @@ Data Centric AI workshop is inviting <span style="color: white; font-weight: bol
 
                     <p class="text-faded"><span style="color: white; font-weight: bold">New Datasets in areas</span>:
                     <ul class="text-faded">
-                      <li>Speech, medical, recommendation/personalization</li>
+                      <li>Speech, vision, manufacturing, medical, recommendation/personalization</li>
                       <li>Science: <a href="https://www.mgi.gov/" target="_blank" style="color: white">https://www.mgi.gov/</a></li></ul>     </p> 
                    
 <p class="text-faded"><span style="color: white; font-weight: bold">Tools & methodologies </span>for accelerating open-source dataset iteration:
