--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-		    <p> <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]">Data-Centric AI (DCAI)</a> represents the recent transition from focusing on modeling to the underlying data used to train and evaluate models. Increasingly, common model architectures have begun to dominate a wide range of tasks, and predictable scaling rules have emerged. While building and using datasets has been critical to these successes, the endeavor is often artisanal -- painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building, maintaining, and evaluating datasets easier, cheaper, and more repeatable. The DCAI movement aims to address this lack of tooling, best practices, and infrastructure for managing data in modern ML systems.</p>
+		    <p>Data-Centric AI (DCAI) represents the recent transition from focusing on modeling to the underlying data used to train and evaluate models. Increasingly, common model architectures have begun to dominate a wide range of tasks, and predictable scaling rules have emerged. While building and using datasets has been critical to these successes, the endeavor is often artisanal -- painstaking and expensive. The community lacks high productivity and efficient open data engineering tools to make building, maintaining, and evaluating datasets easier, cheaper, and more repeatable. The DCAI movement aims to address this lack of tooling, best practices, and infrastructure for managing data in modern ML systems.</p>
 
 <p>The main objective of this workshop is to cultivate the DCAI community into a vibrant interdisciplinary field that tackles practical data problems. We consider some of those problems to be: data collection/generation, data labeling, data preprocess/augmentation, data quality evaluation, data debt, and data governance. Many of these areas are nascent, and we hope to further their development by knitting them together into a coherent whole. Together we will define the DCAI movement that will shape the future of AI and ML. Please see our call for papers below to take an active role in shaping that future! If you have any questions, please reach out to 
 	the organizers (<a style="color: black"; href="mailto:neurips-data-centric-ai@googlegroups.com"> neurips-data-centric-ai@googlegroups.com</a>) 
@@ -125,9 +125,8 @@
 		Learn more about Data Centric AI here 
 		<span style="width: 20px; display: inline-block;"></span>
                 <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank" class="btn btn-warning btn-xl">DCAI</a>
-		
-		<!--
-                    <p>This workshop builds on a tradition of <u><b>workshops on managing data</b></u>:
+	
+                    <p>This workshop builds on a tradition of series of workshops focusing on the role of data in AI:
 			<ul style="font-size: 150%">
 			<li><a href="http://eval.how/dew2020/index.html" target="_blank">Data Excellence</a> @ HCOMP</li>    
                         <li><a href="http://eval.how/aaai-2020/" target="_blank">Meta-Eval 2020</a> @ AAAI</li>
@@ -135,7 +134,7 @@
                         <li><a href="https://sadworkshop.wordpress.com/" target="_blank">SAD 2019</a> @ TheWebConf (WWW)</li>
                         <li><a href="https://sadworkshop.wordpress.com/2018-edition/" target="_blank">SAD 2018</a> @ HCOMP</li>
                     </ul>
-                    </p> -->
+                    </p>
 
                      </p>
                 </p>
@@ -230,7 +229,7 @@ We need a framework for <span style="color: white; font-weight: bold">excellence
 		    
 <h3 class="section-heading text-center" id="topics">Submission Instructions</h3>
 
-<p class="text-faded"> We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. All papers need to be formatted according to the NeurIPS2021 guidelines. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop. The submission deadline is September 17, 2021, anywhere on Earth (AoE). If you experience any problems with the submission site, please email us at 
+<p class="text-faded"> We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. All papers need to be formatted according to the <a href="https://nips.cc/Conferences/2021/CallForPapers" target="_blank">NeurIPS2021 Formatting Instructions</a>. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop. The submission deadline is September 17, 2021, anywhere on Earth (AoE). If you experience any problems with the submission site, please email us at 
 	(<a style="color: white"; href="mailto:neurips-data-centric-ai@googlegroups.com"> neurips-data-centric-ai@googlegroups.com</a>) 
 	<!-- or ask on Discourse (<a style="color: white"; href=" https://community.deeplearning.ai/invites/pxU2rPjLye">new user</a>) 
 	(<a style="color: white"; href="https://community.deeplearning.ai/c/random-discussions/data-centric-ai/data-centric-ai-workshop/217">existing user</a>) --> </p>
