--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -156,13 +156,13 @@
     <div class="container">
         <div class="row">
             
-            <div class="col-lg-3 col-md-6 text-center">
+<!--             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
 			<h3>Early Submission Deadline</h3>
 		    <p class="text-muted">September 17, 2021</p>
                 </div>
-            </div>
+            </div> -->
 	    <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-upload wow bounceIn text-primary"></i>
