--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -122,12 +122,12 @@
 		    
 		    </p>
 		
-		Learn more about Data Centric AI here 
-		<span style="width: 20px; display: inline-block;"></span>
-                <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank" class="btn btn-warning btn-xl">DCAI</a>
+		Learn more about Data Centric AI (DCAI)  
+<!-- 		<span style="width: 20px; display: inline-block;"></span> -->
+                <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank" class="btn btn-warning btn-xl">here</a>
 	
                     <p>This workshop builds on a tradition of series of workshops focusing on the role of data in AI:
-			<ul style="font-size: 150%">
+			<ul>
 			<li><a href="http://eval.how/dew2020/index.html" target="_blank">Data Excellence</a> @ HCOMP</li>    
                         <li><a href="http://eval.how/aaai-2020/" target="_blank">Meta-Eval 2020</a> @ AAAI</li>
                         <li><a href="http://eval.how/aaai/" target="_blank">REAIS 2019</a> @ HCOMP</li>
