--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -124,7 +124,7 @@
 		
 		Learn more about Data Centric AI (DCAI)  
 <!-- 		<span style="width: 20px; display: inline-block;"></span> -->
-                <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank" class="btn btn-warning btn-xl">here</a>
+                <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank">here</a>
 	
                     <p>This workshop builds on a tradition of series of workshops focusing on the role of data in AI:
 			<ul>
