--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -303,13 +303,13 @@ Data Centric AI workshop is inviting <span style="color: white; font-weight: bol
                 <h2 class="section-heading">Organizing Committee</h2>
                 <hr class="light">
                 <p>
-Andrew Ng, Landing AI, DeepLearning.AI<br>
-Lora Aroyo, Google Research<br>
-Cody Coleman, Stanford University<br>
-Greg Diamos, Landing AI<br>
-Vijay Janapa Reddi, Harvard University<br>	    
-Joaquin Vanschoren, Eindhoven University of Technology<br>	    
-Sharon Zhou, Stanford University<br>		    
+			<a href="https://www.andrewng.org/">Andrew Ng</a>, Landing AI, DeepLearning.AI<br>
+			<a href="https://lora-aroyo.org/">Lora Aroyo</a>, Google Research<br>
+			<a href="http://www.codycoleman.com/">Cody Coleman</a>, Stanford University<br>
+			<a href="https://www.linkedin.com/in/gregory-diamos-1a8b9083/">Greg Diamos</a>, Landing AI<br>
+			<a href="https://scholar.harvard.edu/vijay-janapa-reddi/home">Vijay Janapa Reddi</a>, Harvard University<br>	    
+			<a href="https://joaquinvanschoren.github.io/home/">Joaquin Vanschoren</a>, Eindhoven University of Technology<br>	    
+			<a href="https://sharonzhou.me/">Sharon Zhou</a>, Stanford University<br>		    
                 </p>
                 <br>
                 <br>
