--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -121,7 +121,7 @@
 		    
 		    </p>
 		
-		Learn more about Data Centric AI (DCAI)  
+		<p>Learn more about Data Centric AI (DCAI)  
 <!-- 		<span style="width: 20px; display: inline-block;"></span> -->
                 <a href="https://www.youtube.com/watch?v=06-AZXmwHjo&ab_channel=DeepLearningAI]" target="_blank">here</a>. This workshop builds on a tradition of series of workshops focusing on the role of data in AI:
 			<ul>
@@ -130,7 +130,7 @@
                         <li><a href="http://eval.how/aaai/" target="_blank">REAIS 2019</a> @ HCOMP</li>
                         <li><a href="https://sadworkshop.wordpress.com/" target="_blank">SAD 2019</a> @ TheWebConf (WWW)</li>
                         <li><a href="https://sadworkshop.wordpress.com/2018-edition/" target="_blank">SAD 2018</a> @ HCOMP</li>
-                    </ul>
+		</ul></p>
             
 
                      </p>
