--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -149,8 +149,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-		            <div class="col-lg-12 text-center">
+        <div class="row text-center">
 
             
 <!--             <div class="col-lg-3 col-md-6 text-center">
@@ -195,7 +194,7 @@
             </div>	
             
         </div>
-	    </div>
+	 
     </div>
 </section>
 
