--- a/dcai2021/index.html
+++ b/dcai2021/index.html
@@ -195,7 +195,7 @@
             
 		<div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-faq wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>FAQ</h3>
                     <p class="text-muted">
                         For questions please check <a href="https://groups.google.com/u/1/g/neurips-data-centric-ai" target="_blank">FAQ</a><br>
